--- a/auto/templates/auto/ride_detail.html
+++ b/auto/templates/auto/ride_detail.html
@@ -16,9 +16,8 @@
             <p><b>Номер авто:</b> {{ ride.vehicle.registration_number  }}</p>
             <p><b>Водитель:</b> {{ ride.vehicle.current_driver|default_if_none:"Нет" }}</p>
             <p><b>Начало поездки:</b> {{ ride.start_date }}</p>
-            <p><b>Окончание поездки:</b> {{ ride.end_date }}</p>
+            <p><b>Окончание поездки:</b> {{ ride.end_date|default_if_none:"Нет" }}</p>
             <p><b>Точка отправления:</b> {{ ride.get_start_address }}</p>
-            <p><b>Точка прибытия:</b> {{ ride.get_end_address }}</p>
         </div>
         
         <div class=col-md-6>
@@ -32,7 +31,7 @@
 
 <script>
 
-    var mymap = L.map('mapid').setView({{ center_point|safe }}, 8);
+    var mymap = L.map('mapid').setView({{ center_point|safe }}, 12);
 
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
