--- a/auto/templates/auto/ride_detail.html
+++ b/auto/templates/auto/ride_detail.html
@@ -18,6 +18,7 @@
             <p><b>Начало поездки:</b> {{ ride.start_date }}</p>
             <p><b>Окончание поездки:</b> {{ ride.end_date|default_if_none:"Нет" }}</p>
             <p><b>Точка отправления:</b> {{ ride.get_start_address }}</p>
+            <p><b>Точка отправления:</b> {{ ride.get_end_address|default_if_none:"-" }}</p>
         </div>
         
         <div class=col-md-6>
@@ -31,7 +32,7 @@
 
 <script>
 
-    var mymap = L.map('mapid').setView({{ center_point|safe }}, 12);
+    var mymap = L.map('mapid').setView({{ center_point|safe }}, 6);
 
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
